--- a/priya/onlineshopping.html
+++ b/priya/onlineshopping.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Online Shop</h1>
+        <h1>Welcome to the Online</h1>
         <div class="cart">
             <button onclick="viewCart()">View Cart (<span id="cart-count">0</span>)</button>
         </div>
@@ -42,6 +42,7 @@
 
     <!-- Cart Modal -->
     <div id="cart-modal" class="cart-modal">
+        <h1>something</h1>
         <div class="cart-modal-content">
             <span class="close" onclick="closeCart()">&times;</span>
             <h2>Your Cart</h2>
