--- a/priya/onlineshopping.html
+++ b/priya/onlineshopping.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Online </h1>
+        <h1>Welcome to the Online Shopping</h1>
         <div class="cart">
             <button onclick="viewCart()">View Cart (<span id="cart-count">0</span>)</button>
         </div>
